@@ -42,4 +42,9 @@ class ExpiredTraceState extends TraceState
     {
         delegate.traceImpl(message);
     }
+
+    protected void waitForPendingEvents()
+    {
+        delegate.waitForPendingEvents();
+    }
 }
